RESOLVED FIXED173042
Crash trying to drag the entire text of a long book out of Mail compose view
https://bugs.webkit.org/show_bug.cgi?id=173042
Summary Crash trying to drag the entire text of a long book out of Mail compose view
Tim Horton
Reported 2017-06-06 17:49:34 PDT
Crash trying to drag the entire text of a long book out of Mail compose view
Attachments
Patch (9.77 KB, patch)
2017-06-06 17:51 PDT, Tim Horton
no flags
Tim Horton
Comment 1 2017-06-06 17:51:03 PDT
Tim Horton
Comment 2 2017-06-06 17:52:19 PDT
Hmm, even though we don't have any TextIndicator tests, perhaps I can test the lack of crashing.
Tim Horton
Comment 3 2017-06-06 17:52:48 PDT
Tim Horton
Comment 4 2017-06-06 18:44:30 PDT
Heh, the test doesn't fail, because the allocation just fails instead of getting jetsam'd.
Tim Horton
Comment 5 2017-06-06 18:44:47 PDT
(because it's running in the simulator)
WebKit Commit Bot
Comment 6 2017-06-06 19:17:31 PDT
Comment on attachment 312147 [details] Patch Clearing flags on attachment: 312147 Committed r217870: <http://trac.webkit.org/changeset/217870>
WebKit Commit Bot
Comment 7 2017-06-06 19:17:33 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.